# gooroom-dockbarx-applet

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  kr.gooroom.DockbarxApplet.panel-applet.in.in
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  dockbarx-applet-module.c  dockbarx-applet.c  dockbarx-applet.h  dockbarx-module.c  gooroom-update-launchers-helper.c  panel-glib.c  panel-glib.h  xfce4-dockbarx-plug.py
